--- a/cnn_kernels_demo.ipynb
+++ b/cnn_kernels_demo.ipynb
@@ -31,7 +31,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "%matplotlib inline\n",
     "import os, math\n",
     "import numpy as np\n",
@@ -279,7 +278,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## (Opcional) Entrenamiento rápido en MNIST\n",
+    "## Entrenamiento rápido en MNIST\n",
     "\n",
     "Ejecuta la celda para entrenar 1–2 épocas. Requiere `torchvision`.  \n",
     "Al final, visualiza de nuevo los mapas de activación de `conv1` para comparar **antes vs. después**.\n"
@@ -292,7 +291,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def train_quick_mnist(epochs=1, batch_size=128, lr=1e-3, device='cpu'):\n",
     "    try:\n",
     "        import torchvision\n",
@@ -340,21 +338,29 @@
     "        acc = eval_acc()\n",
     "        print(f\"Época {ep+1}/{epochs} - Accuracy: {acc:.3f}\")\n",
     "\n",
+    "    checkpoint = {\n",
+    "        'model_state_dict': model.state_dict(),\n",
+    "        'model_class': 'SmallCNN',\n",
+    "        'n_classes': 10\n",
+    "    }\n",
+    "    torch.save(checkpoint, 'mnist_cnn_model.pth')\n",
+    "    print(\"Modelo guardado en 'mnist_cnn_model.pth'\")\n",
+    "\n",
     "    return model, test_set\n",
     "\n",
     "# Descomenta para entrenar y visualizar activaciones después del entrenamiento:\n",
-    "# model_trained, test_set = train_quick_mnist(epochs=2, device='cpu')\n",
-    "# if model_trained is not None:\n",
-    "#     model_trained.eval()\n",
-    "#     # Tomamos una imagen del test y miramos Conv1\n",
-    "#     x_ex, y_ex = test_set[0]\n",
-    "#     with torch.no_grad():\n",
-    "#         a1_after = F.relu(model_trained.conv1(x_ex.unsqueeze(0)))\n",
-    "#     chans_after = a1_after.squeeze(0)\n",
-    "#     grid_show([chans_after[i] for i in range(chans_after.size(0))],\n",
-    "#               titles=[f\"Conv1 map {i} (entrenado)\" for i in range(chans_after.size(0))],\n",
-    "#               ncols=4,\n",
-    "#               suptitle=\"Mapas de activación - Conv1 (después de entrenar)\")\n"
+    "model_trained, test_set = train_quick_mnist(epochs=2, device='cpu')\n",
+    "if model_trained is not None:\n",
+    "    model_trained.eval()\n",
+    "    # Tomamos una imagen del test y miramos Conv1\n",
+    "    x_ex, y_ex = test_set[0]\n",
+    "    with torch.no_grad():\n",
+    "        a1_after = F.relu(model_trained.conv1(x_ex.unsqueeze(0)))\n",
+    "    chans_after = a1_after.squeeze(0)\n",
+    "    grid_show([chans_after[i] for i in range(chans_after.size(0))],\n",
+    "              titles=[f\"Conv1 map {i} (entrenado)\" for i in range(chans_after.size(0))],\n",
+    "              ncols=4,\n",
+    "              suptitle=\"Mapas de activación - Conv1 (después de entrenar)\")\n"
    ]
   },
   {
@@ -371,11 +377,139 @@
     "- Para comparar PyTorch vs OpenCV, puedes replicar la sección de kernels con `cv2.filter2D` y observar diferencias numéricas (por normalización y bordes).  \n",
     "- Para ver los **filtros aprendidos**, inspecciona `net.conv1.weight` antes y después de entrenar con MNIST.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c098856",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Entrenamiento solo de las capas totalmente conectadas\n",
+    "\n",
+    "def load_and_finetune_fc_layers(model_path='mnist_cnn_model.pth', \n",
+    "                                 epochs=3, \n",
+    "                                 batch_size=128, \n",
+    "                                 lr=1e-3, \n",
+    "                                 device='cpu'):\n",
+    "    \"\"\"\n",
+    "    Carga un modelo preentrenado y reentrena solo las capas totalmente conectadas.\n",
+    "    Las capas convolucionales se mantienen congeladas (no se actualizan).\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        import torchvision\n",
+    "        from torchvision import transforms\n",
+    "    except ImportError:\n",
+    "        print(\"torchvision no está instalado. Omite el reentrenamiento.\")\n",
+    "        return None, None\n",
+    "    \n",
+    "    device = torch.device(device)\n",
+    "    \n",
+    "    # 1. Cargar el checkpoint\n",
+    "    print(f\"Cargando modelo desde {model_path}...\")\n",
+    "    checkpoint = torch.load(model_path, map_location=device)\n",
+    "    \n",
+    "    # 2. Crear el modelo y cargar los pesos\n",
+    "    model = SmallCNN(n_classes=checkpoint.get('n_classes', 10))\n",
+    "    model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "    model = model.to(device)\n",
+    "    \n",
+    "    # 3. CONGELAR las capas convolucionales (no se actualizarán)\n",
+    "    for param in model.conv1.parameters():\n",
+    "        param.requires_grad = False\n",
+    "    for param in model.conv2.parameters():\n",
+    "        param.requires_grad = False\n",
+    "    \n",
+    "    # 4. Las capas totalmente conectadas (head) SÍ se entrenarán\n",
+    "    # Verificar qué parámetros se entrenarán\n",
+    "    trainable_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "    total_params = sum(p.numel() for p in model.parameters())\n",
+    "    print(f\"Parámetros entrenables: {trainable_params:,} / {total_params:,}\")\n",
+    "    print(f\"Capas congeladas: conv1, conv2\")\n",
+    "    print(f\"Capas entrenables: head (capas totalmente conectadas)\")\n",
+    "    \n",
+    "    # 5. Preparar datos\n",
+    "    tfm = transforms.Compose([transforms.ToTensor()])\n",
+    "    train_set = torchvision.datasets.MNIST(root=\"./data\", train=True, transform=tfm, download=False)\n",
+    "    test_set = torchvision.datasets.MNIST(root=\"./data\", train=False, transform=tfm, download=False)\n",
+    "    train_loader = torch.utils.data.DataLoader(train_set, batch_size=batch_size, shuffle=True)\n",
+    "    test_loader = torch.utils.data.DataLoader(test_set, batch_size=256, shuffle=False)\n",
+    "    \n",
+    "    # 6. Optimizador SOLO para las capas entrenables (head)\n",
+    "    opt = torch.optim.Adam(\n",
+    "        filter(lambda p: p.requires_grad, model.parameters()),  # Solo parámetros con requires_grad=True\n",
+    "        lr=lr\n",
+    "    )\n",
+    "    loss_fn = nn.CrossEntropyLoss()\n",
+    "    \n",
+    "    # 7. Función de evaluación\n",
+    "    def eval_acc():\n",
+    "        model.eval()\n",
+    "        correct = 0\n",
+    "        total = 0\n",
+    "        with torch.no_grad():\n",
+    "            for xx, yy in test_loader:\n",
+    "                xx, yy = xx.to(device), yy.to(device)\n",
+    "                logits = model(xx)\n",
+    "                pred = logits.argmax(1)\n",
+    "                correct += (pred == yy).sum().item()\n",
+    "                total += yy.numel()\n",
+    "        return correct/total if total else 0.0\n",
+    "    \n",
+    "    # 8. Entrenamiento\n",
+    "    print(\"\\nReentrenando solo las capas totalmente conectadas...\")\n",
+    "    initial_acc = eval_acc()\n",
+    "    print(f\"Accuracy inicial (con modelo preentrenado): {initial_acc:.3f}\\n\")\n",
+    "    \n",
+    "    model.train()\n",
+    "    for ep in range(epochs):\n",
+    "        for xx, yy in train_loader:\n",
+    "            xx, yy = xx.to(device), yy.to(device)\n",
+    "            opt.zero_grad(set_to_none=True)\n",
+    "            logits = model(xx)\n",
+    "            loss = loss_fn(logits, yy)\n",
+    "            loss.backward()\n",
+    "            opt.step()\n",
+    "        acc = eval_acc()\n",
+    "        print(f\"Época {ep+1}/{epochs} - Accuracy: {acc:.3f}\")\n",
+    "    \n",
+    "    # 9. Guardar el modelo reentrenado\n",
+    "    checkpoint_finetuned = {\n",
+    "        'model_state_dict': model.state_dict(),\n",
+    "        'model_class': 'SmallCNN',\n",
+    "        'n_classes': checkpoint.get('n_classes', 10),\n",
+    "        'finetuned_fc_only': True\n",
+    "    }\n",
+    "    torch.save(checkpoint_finetuned, 'mnist_cnn_model_finetuned_fc.pth')\n",
+    "    print(f\"\\nModelo reentrenado guardado en 'mnist_cnn_model_finetuned_fc.pth'\")\n",
+    "    \n",
+    "    return model, test_set\n",
+    "\n",
+    "# Ejecutar el reentrenamiento\n",
+    "model_finetuned, test_set_finetuned = load_and_finetune_fc_layers(\n",
+    "    model_path='mnist_cnn_model.pth',\n",
+    "    epochs=3,\n",
+    "    lr=1e-3,\n",
+    "    device='cpu'\n",
+    ")\n",
+    "\n",
+    "# Visualizar activaciones después del reentrenamiento\n",
+    "if model_finetuned is not None:\n",
+    "    model_finetuned.eval()\n",
+    "    x_ex, y_ex = test_set_finetuned[0]\n",
+    "    with torch.no_grad():\n",
+    "        a1_finetuned = F.relu(model_finetuned.conv1(x_ex.unsqueeze(0)))\n",
+    "    chans_finetuned = a1_finetuned.squeeze(0)\n",
+    "    grid_show([chans_finetuned[i] for i in range(chans_finetuned.size(0))],\n",
+    "              titles=[f\"Conv1 map {i} (FC reentrenado)\" for i in range(chans_finetuned.size(0))],\n",
+    "              ncols=4,\n",
+    "              suptitle=\"Mapas de activación - Conv1 (después de reentrenar solo FC)\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch_env",
+   "display_name": "rnap",
    "language": "python",
    "name": "python3"
   },
@@ -389,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
